--- a/procedimentos.html
+++ b/procedimentos.html
@@ -50,10 +50,8 @@
                         <input type="checkbox" id="opcao6" name="opcao6" value="Opção 6">
                         <span class="checkmark"></span>
                         <div class="texto1">Cânula de Guedel</div>
-                    </label>
-                </div>
+                    </label><br>
 
-                <div class="d2">
                     <label for="opcao7" class="agrupamento">
                         <input type="checkbox" id="opcao7" name="opcao7" value="Opção 7">
                         <span class="checkmark"></span>
@@ -66,6 +64,9 @@
                         <div class="texto1">Emprego de D.E.A</div>
                     </label><br>
 
+                </div>
+
+                <div class="d2">
                     <label for="opcao9" class="agrupamento">
                         <input type="checkbox" id="opcao9" name="opcao9" value="Opção 9">
                         <span class="checkmark"></span>
@@ -78,20 +79,94 @@
                         <div class="texto1">Limpeza de Ferimento</div>
                     </label><br>
 
-                    <label for="opcao10" class="agrupamento">
-                        <input type="checkbox" id="opcao10" name="opcao10" value="Opção 10">
+                    <label for="opcao11" class="agrupamento">
+                        <input type="checkbox" id="opcao11" name="opcao11" value="Opção 11">
                         <span class="checkmark"></span>
-                        <div class="texto1">Limpeza de Ferimento</div>
+                        <div class="texto1">Curativos</div>
                     </label><br>
+
+                    <label for="opcao12" class="agrupamento">
+                        <input type="checkbox" id="opcao12" name="opcao12" value="Opção 12">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Compressivo</div>
+                    </label><br>
+
+                    <label for="opcao13" class="agrupamento">
+                        <input type="checkbox" id="opcao13" name="opcao13" value="Opção 13">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Encravamento</div>
+                    </label><br>
+
+                    <label for="opcao14" class="agrupamento">
+                        <input type="checkbox" id="opcao14" name="opcao14" value="Opção 14">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Ocular</div>
+                    </label><br>
+
+                    <label for="opcao15" class="agrupamento">
+                        <input type="checkbox" id="opcao15" name="opcao15" value="Opção 15">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Queimadura</div>
+                    </label><br>
+
+                    <label for="opcao16" class="agrupamento">
+                        <input type="checkbox" id="opcao16" name="opcao16" value="Opção 16">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Simples</div>
+                    </label><br>
+
                 </div>
 
                 <div class="d3">
+                    <label for="opcao17" class="agrupamento">
+                        <input type="checkbox" id="opcao17" name="opcao17" value="Opção 17">
+                        <span class="checkmark"></span>
+                        <div class="texto1">3 Pontas</div>
+                    </label><br>
 
+                    <label for="opcao18" class="agrupamento">
+                        <input type="checkbox" id="opcao18" name="opcao18" value="Opção 18">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Imobilizações</div>
+                    </label><br>
+
+                    <label for="opcao19" class="agrupamento">
+                        <input type="checkbox" id="opcao19" name="opcao19" value="Opção 19">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Membro Inf. Dir</div>
+                    </label><br>
+
+                    <label for="opcao20" class="agrupamento">
+                        <input type="checkbox" id="opcao20" name="opcao20" value="Opção 20">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Membro Inf. Esq</div>
+                    </label><br>
+
+                    <label for="opcao21" class="agrupamento">
+                        <input type="checkbox" id="opcao21" name="opcao21" value="Opção 21">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Membro Sup. Dir</div>
+                    </label><br>
+
+                    <label for="opcao22" class="agrupamento">
+                        <input type="checkbox" id="opcao22" name="opcao22" value="Opção 22">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Membro Sup. Esq</div>
+                    </label><br>
+
+                    <label for="opcao23" class="agrupamento">
+                        <input type="checkbox" id="opcao23" name="opcao23" value="Opção 23">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Quadril</div>
+                    </label><br>
+
+                    <label for="opcao24" class="agrupamento">
+                        <input type="checkbox" id="opcao24" name="opcao24" value="Opção 24">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Cervical</div>
+                    </label><br>
                 </div>
 
-                <div class="d4">
-
-                </div>
             </div>
             <br>
             <div class="separa_btn">
