--- a/dados2.html
+++ b/dados2.html
@@ -4,23 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="image/logo_noar.png">
     <link rel="stylesheet" href="css/dados2.css">
+    <link rel="icon" type="image/png" href="image/logo_noar.png">
     <title>Dados Pessoais 2</title>
 </head>
 <body>
     <div class="formulario">
         <form method="post">
             <div class="forms">
-                <div class="usb">Nº USB: <input type="text" id="usb"></div>
+                <div class="inputs">
+                    <div class="usb">Nº USB: <input type="text" id="usb"></div>
 
-                <div class="ocorr">Nº Ocorr: <input type="text" name="" id="ocorr"></div>  
+                    <div class="ocorr">Nº Ocorr: <input type="text" name="" id="ocorr"></div>
                 
-                <div class="desp">DESP: <input type="text" name="" id="desp"></div>
+                    <div class="desp">DESP: <input type="text" name="" id="desp"></div>
 
-                <div class="hch">H. CH: <input type="text" name="" id="hch"></div>
+                    <div class="hch">H. CH: <input type="text" name="" id="hch"></div>
 
-                <div class="kmfim">KM FINAL: <input type="text" name="" id="kmfim"></div>
+                    <div class="kmfim">KM FINAL: <input type="text" name="" id="kmfim"></div>
+                </div>
+                    <br>
+                <label for="op1" class="agrupamento">
+                    <input type="checkbox" id="op1" name="op1" value="Opção 1">
+                    <span class="checkmark"></span>
+                    <br>
+                    <div class="texto1">CÓD. IR</div>
+                </label><br>
+
+                <label for="op2" class="agrupamento">
+                    <input type="checkbox" id="op2" name="op2" value="Opção 2">
+                    <span class="checkmark"></span>
+                    <br>
+                    <div class="texto1">CÓD. PS</div>
+                </label><br>
 
             </div>
         </form>
