--- a/dados2.html
+++ b/dados2.html
@@ -22,6 +22,11 @@
 
                 <div class="kmfim">KM FINAL: <input type="text" name="" id="kmfim"></div>
 
+                <div class="separa_btn">
+                    <input type="submit" value="Enviar" class="btn">
+                    <input type="reset" value="Limpar" class="btn">
+                  </div>
+
             </div>
         </form>
     </div>
