--- a/dados2.html
+++ b/dados2.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <div class="formulario">
-        <form method="post">
+        <form method="post" action="dados2.php">
             <div class="forms">
-                <div class="usb">Nº USB: <input type="text" id="usb"></div>
+                <div class="usb">Nº USB: <input type="varchar" name="usb" id="usb"></div>
 
-                <div class="ocorr">Nº Ocorr: <input type="text" name="" id="ocorr"></div>  
+                <div class="ocorr">Nº Ocorr: <input type="varchar" name="ocorrencia" id="ocorr"></div>  
                 
-                <div class="desp">DESP: <input type="text" name="" id="desp"></div>
+                <div class="desp">DESP: <input type="varchar" name="desp" id="desp"></div>
 
-                <div class="hch">H. CH: <input type="text" name="" id="hch"></div>
+                <div class="hch">H. CH: <input type="varchar" name="h_ch" id="hch"></div>
 
-                <div class="kmfim">KM FINAL: <input type="text" name="" id="kmfim"></div>
+                <div class="kmfim">KM FINAL: <input type="varchar" name="km_final" id="kmfim"></div>
 
                 <div class="separa_btn">
                     <input type="submit" value="Enviar" class="btn">
