--- a/ffelc.html
+++ b/ffelc.html
@@ -8,6 +8,8 @@
     <link rel="icon" type="image/png" href="image/logo_noar.png">
 </head>
 <body>
-    
+    <form action="" method="post">
+        
+    </form>
 </body>
 </html>
