--- a/graus.html
+++ b/graus.html
@@ -4,22 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="image/logo_noar.png">
+    <link rel="stylesheet" href="css/graus.css">
     <title>Grau de Queimadura</title>
 </head>
 <body>
     <h3>Grau da Queimadura:</h3>
-    <form action="" method="post">
-        <label for="grau1">1º Grau</label>
-        <select name="nao_houve" id="nao_houve">Não Houve</select>
-        <select name="cabeca" id="cabeca">Cabeça</select>
-        <select name="pescoco" id="pescoco">Pescoço</select>
-        <select name="t.ant" id="t.ant">T.Ant</select>
-        <select name="t.pos" id="t.pos">T.Pos</select>
-        <select name="genit" id="genit">Genit</select>
-        <select name="m.i.d" id="m.i.d">M.I.D</select>
-        <select name="m.i.e" id="m.i.e">M.I.E</select>
-        <select name="m.s.d" id="m.s.d">M.S.D</select>
-        <select name="m.s.e" id="m.s.e">M.S.E</select>
+    <form action="" method="post" class="formulario">
+        <div class="titulo">1º Grau</div>
+            <select name="grau1" id="grau1">
+                <option value="nao_houve">Não Houve</option>
+                <option value="cabeca">Cabeça</option>
+                <option value="pescoco">Pescoço</option>
+                <option value="t.ant">T.Ant</option>
+                <option value=""></option>
+            </select>
+        
+
+        <label for="grau2">2º Grau</label>
+            <select name="grau2_nao_houve" id="grau2_nao_houve">Não Houve</select>
+            <select name="grau2_cabeca" id="grau2_cabeca">Cabeça</select>
+            <select name="grau2_pescoco" id="grau2_pescoco">Pescoço</select>
+            <select name="grau2_t.ant" id="grau2_t.ant">T.Ant</select>
+            <select name="grau2_t.pos" id="grau2_t.pos">T.Pos</select>
+            <select name="grau2_genit" id="grau2_genit">Genit</select>
+            <select name="grau2_m.i.d" id="grau2_m.i.d">M.I.D</select>
+            <select name="grau2_m.i.e" id="grau2_m.i.e">M.I.E</select>
+            <select name="grau2_m.s.d" id="grau2_m.s.d">M.S.D</select>
+            <select name="grau2_m.s.e" id="grau2_m.s.e">M.S.E</select>
+
+        <label for="grau3">3º Grau</label>
+            <select name="grau3_nao_houve" id="grau3_nao_houve">Não Houve</select>
+            <select name="grau3_cabeca" id="grau3_cabeca">Cabeça</select>
+            <select name="grau3_pescoco" id="grau3_pescoco">Pescoço</select>
+            <select name="grau3_t.ant" id="grau3_t.ant">T.Ant</select>
+            <select name="grau3_t.pos" id="grau3_t.pos">T.Pos</select>
+            <select name="grau3_genit" id="grau3_genit">Genit</select>
+            <select name="grau3_m.i.d" id="grau3_m.i.d">M.I.D</select>
+            <select name="grau3_m.i.e" id="grau3_m.i.e">M.I.E</select>
+            <select name="grau3_m.s.d" id="grau3_m.s.d">M.S.D</select>
+            <select name="grau3_m.s.e" id="grau3_m.s.e">M.S.E</select>
+
     </form>
 </body>
 </html>
