--- a/graus.html
+++ b/graus.html
@@ -17,33 +17,43 @@
                 <option value="cabeca">Cabeça</option>
                 <option value="pescoco">Pescoço</option>
                 <option value="t.ant">T.Ant</option>
-                <option value=""></option>
+                <option value="t.pos">T.Pos</option>
+                <option value="genit">Genit</option>
+                <option value="m.i.d">M.I.D</option>
+                <option value="m.i.e">M.I.E</option>
+                <option value="m.s.d">M.S.D</option>
+                <option value="m.s.e">M.S.E</option>
             </select>
         
 
-        <label for="grau2">2º Grau</label>
-            <select name="grau2_nao_houve" id="grau2_nao_houve">Não Houve</select>
-            <select name="grau2_cabeca" id="grau2_cabeca">Cabeça</select>
-            <select name="grau2_pescoco" id="grau2_pescoco">Pescoço</select>
-            <select name="grau2_t.ant" id="grau2_t.ant">T.Ant</select>
-            <select name="grau2_t.pos" id="grau2_t.pos">T.Pos</select>
-            <select name="grau2_genit" id="grau2_genit">Genit</select>
-            <select name="grau2_m.i.d" id="grau2_m.i.d">M.I.D</select>
-            <select name="grau2_m.i.e" id="grau2_m.i.e">M.I.E</select>
-            <select name="grau2_m.s.d" id="grau2_m.s.d">M.S.D</select>
-            <select name="grau2_m.s.e" id="grau2_m.s.e">M.S.E</select>
+        <div class="titulo">2º Grau</div>
+            <select name="grau2" id="grau2">
+                <option value="grau2_nao_houve">Não Houve</option>
+                <option value="grau2_cabeca">Cabeça</option>
+                <option value="grau2_pescoco">Pescoço</option>
+                <option value="grau2_t.ant">T.Ant</option>
+                <option value="grau2_t.pos">T.Pos</option>
+                <option value="grau2_genit">Genit</option>
+                <option value="grau2_m.i.d">M.I.D</option>
+                <option value="grau2_m.i.e">M.I.E</option>
+                <option value="grau2_m.s.d">M.S.D</option>
+                <option value="grau2_m.s.e">M.S.E</option>
+            </select>
 
-        <label for="grau3">3º Grau</label>
-            <select name="grau3_nao_houve" id="grau3_nao_houve">Não Houve</select>
-            <select name="grau3_cabeca" id="grau3_cabeca">Cabeça</select>
-            <select name="grau3_pescoco" id="grau3_pescoco">Pescoço</select>
-            <select name="grau3_t.ant" id="grau3_t.ant">T.Ant</select>
-            <select name="grau3_t.pos" id="grau3_t.pos">T.Pos</select>
-            <select name="grau3_genit" id="grau3_genit">Genit</select>
-            <select name="grau3_m.i.d" id="grau3_m.i.d">M.I.D</select>
-            <select name="grau3_m.i.e" id="grau3_m.i.e">M.I.E</select>
-            <select name="grau3_m.s.d" id="grau3_m.s.d">M.S.D</select>
-            <select name="grau3_m.s.e" id="grau3_m.s.e">M.S.E</select>
+        <div class="titulo">3º Grau</div>
+        <select name="grau3" id="grau3">
+            <option value="grau3_nao_houve">Não Houve</option>
+            <option value="grau3_cabeca">Cabeça</option>
+            <option value="grau3_pescoco">Pescoço</option>
+            <option value="grau3_t.ant">T.Ant</option>
+            <option value="grau3_t.pos">T.Pos</option>
+            <option value="grau3_genit">Genit</option>
+            <option value="grau3_m.i.d">M.I.D</option>
+            <option value="grau3_m.i.e">M.I.E</option>
+            <option value="grau3_m.s.d">M.S.D</option>
+            <option value="grau3_m.s.e">M.S.E</option>
+        </select>
+
 
     </form>
 </body>
