--- a/ffelc.html
+++ b/ffelc.html
@@ -75,7 +75,10 @@
 
             </tr>
         </table>
-        <input type="submit" value="Enviar" class="btn">
+        <div class="separa_btn">
+            <input type="submit" value="Enviar" class="btn">
+            <input type="reset" value="Limpar" class="btn">
+        </div>
     </form>
 </body>
 </html>
