--- a/dados2.html
+++ b/dados2.html
@@ -22,6 +22,23 @@
 
                 <div class="kmfim">KM FINAL: <input type="varchar" name="km_final" id="kmfim"></div>
 
+                <br>
+                <label for="op1" class="agrupamento">
+                    <input type="checkbox" id="op1" name="op1" value="Opção 1">
+                    <span class="checkmark"></span>
+                    <br>
+                    <div class="texto1">CÓD. IR</div>
+                </label><br>
+
+                <label for="op2" class="agrupamento">
+                    <input type="checkbox" id="op2" name="op2" value="Opção 2">
+                    <span class="checkmark"></span>
+                    <br>
+                    <div class="texto1">CÓD. PS</div>
+                </label><br>
+
+
+
                 <div class="separa_btn">
                     <input type="submit" value="Enviar" class="btn">
                     <input type="reset" value="Limpar" class="btn">
