--- a/avaliacaopaciente.html
+++ b/avaliacaopaciente.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container">
-        <form action="#" method="post" class="form">
+        <form action="avaliacaopaciente.php" method="post" class="form">
             <div class="separa">
                 <div class="d1">
                     <label for="opcao1" class="agrupamento">
@@ -142,7 +142,7 @@
 
                     <label for="opcao21" class="agrupamento">
                         <div class="outro">
-                            <input type="text" placeholder="Outro...">
+                            <input type="varchar" placeholder="Outro..." id="outro" name="outro">
                         </div>
                     </label>
                 </div>
