--- a/decisaotransporte.html
+++ b/decisaotransporte.html
@@ -26,7 +26,7 @@
                     <label for="opcao2" class="agrupamento">
                         <input type="checkbox" id="opcao2" name="opcao2" value="Opção 2">
                         <span class="checkmark"></span>
-                        <img src="image/neutro.webp" width="75px" height="75px" class="imagem">
+                        <img src="image/potencialmenteinstavel.png" width="75px" height="75px" class="imagem">
                         <div class="texto1">Potencialmente Instável</div>
                     </label>
                 </div>
@@ -35,7 +35,7 @@
                     <label for="opcao3" class="agrupamento">
                         <input type="checkbox" id="opcao3" name="opcao3" value="Opção 3">
                         <span class="checkmark"></span>
-                        <img src="image/torta.png" width="75px" height="75px" class="imagem">
+                        <img src="image/instavel.png" width="75px" height="75px" class="imagem">
                         <div class="texto1">Instável</div>
                     </label><br>
 
